--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "three-nuts",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://indiebubbler.github.io/three-nuts",
   "dependencies": {
     "createjs": "^1.0.1",
     "createjs-module": "^0.8.3",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
